--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -22,7 +22,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://www.ox.ac.uk/sites/files/oxford/field/field_image_main/GettyImages-869174338%20%281%29.jpg");
+  background-image: url("https://ezyoutsourcinghub.com/wp-content/uploads/2021/09/Why-Outsource-Back-office-Operations.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
