--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -22,7 +22,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://ezyoutsourcinghub.com/wp-content/uploads/2021/09/Why-Outsource-Back-office-Operations.jpg");
+  background-image: url("https://images.pexels.com/photos/7437489/pexels-photo-7437489.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
