--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -22,7 +22,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://images.pexels.com/photos/7437489/pexels-photo-7437489.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-image: url("https://img.freepik.com/free-vector/vector-set-illustrated-people_53876-17363.jpg?t=st=1726379131~exp=1726382731~hmac=4fd682bb466dbef90d6183291ac84590fcb39ed8e0754375df766c759a45a014&w=996");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
