--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -22,7 +22,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://images.pexels.com/photos/9304667/pexels-photo-9304667.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-image: url("https://img.freepik.com/free-vector/abstract-sale-banner-offer-discount-business-background-free-vector_1340-22420.jpg?t=st=1728563181~exp=1728566781~hmac=f3c0809e41395334b311a43969281358af8313b2dc9dcf8e2370143425d077dc&w=1380");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
