--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -22,7 +22,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://img.freepik.com/free-vector/abstract-sale-banner-offer-discount-business-background-free-vector_1340-22420.jpg?t=st=1728563181~exp=1728566781~hmac=f3c0809e41395334b311a43969281358af8313b2dc9dcf8e2370143425d077dc&w=1380");
+  background-image: url("https://static.wixstatic.com/media/7aafde_61c79d442c684e09b4731a74a6814b01~mv2.jpg/v1/fill/w_1920,h_1280,al_c/7aafde_61c79d442c684e09b4731a74a6814b01~mv2.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
