--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -22,7 +22,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://static.wixstatic.com/media/7aafde_61c79d442c684e09b4731a74a6814b01~mv2.jpg/v1/fill/w_1920,h_1280,al_c/7aafde_61c79d442c684e09b4731a74a6814b01~mv2.jpg");
+  background-image: url("/assets/img/promo-header-1.webp");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
