--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("../../img/bg-24-11-2024.webp");
+  background-image: url("https://g.foolcdn.com/editorial/images/679481/gettyimages-524156476.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
