ganti gambar, testi, dan icon

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://g.foolcdn.com/editorial/images/679481/gettyimages-524156476.jpg");
+  background-image: url("https://www.elgazette.com/wp-content/uploads/2021/11/shutterstock_394943920-scaled.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
