--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://www.elgazette.com/wp-content/uploads/2021/11/shutterstock_394943920-scaled.jpg");
+  background-image: url("https://images.pexels.com/photos/8197537/pexels-photo-8197537.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
