update gambar, testi, dan  emote

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://mccollegesby.wordpress.com/wp-content/uploads/2018/01/cropped-picture2.jpg");
+  background-image: url("https://3.bp.blogspot.com/-IxmMl_6Sf9s/VuqEjdIkpLI/AAAAAAAAAIE/0cnWH4QWguUaenL9SsqMbe0WphLtNpcCw/w1200-h630-p-k-no-nu/Imagens%2B40.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
