update icon, testi, dan gambar

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://3.bp.blogspot.com/-IxmMl_6Sf9s/VuqEjdIkpLI/AAAAAAAAAIE/0cnWH4QWguUaenL9SsqMbe0WphLtNpcCw/w1200-h630-p-k-no-nu/Imagens%2B40.jpg");
+  background-image: url("https://i.ytimg.com/vi/sf7MhB4QQW8/maxresdefault.jpg?sqp=-oaymwEmCIAKENAF8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGE8gXShlMA8=&amp;rs=AOn4CLDYTKLZ2V8japO8W1tV4fuwqFA9Ng");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
