update foto & testi

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://i.ytimg.com/vi/sf7MhB4QQW8/maxresdefault.jpg?sqp=-oaymwEmCIAKENAF8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGE8gXShlMA8=&amp;rs=AOn4CLDYTKLZ2V8japO8W1tV4fuwqFA9Ng");
+  background-image: url("../../img/promo-header-3.webp");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
