update testi, icon, dan gambar

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("../../img/promo-header-2.webp");
+  background-image: url("https://educationdestinationasia.com/__file/01HXKFKBBYS2TJ6S4AEVTG047H");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
