--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://static.wixstatic.com/media/7aafde_9cd067aca6b645c9bfad63a245270101~mv2.jpg/v1/fill/w_1920,h_1080,al_c/7aafde_9cd067aca6b645c9bfad63a245270101~mv2.jpg");
+  background-image: url("https://cdn.nur.kz/images/1200x675/364f38d42c3adb2c.jpeg?version=1");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
