sudah update testi, gambar, dan icon

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://cdn.nur.kz/images/1200x675/364f38d42c3adb2c.jpeg?version=1");
+  background-image: url("https://www.asiavisioncapital.com/wp-content/uploads/2024/10/Comprehensive-Support.jpg.webp");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
