--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -22,9 +22,8 @@
   height: 100vh;
 }
 
-/* https://www.asiavisioncapital.com/wp-content/uploads/2024/10/Comprehensive-Support.jpg.webp */
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://pub-c2c1d9230f0b4abb9b0d2d95e06fd4ef.r2.dev/sites/430/2022/03/group-asia-young-creative-people-smart-casual-wear-smiling-arms-crossed-creative-office-workplace-diverse-asian-male-female-stand-together-startup-coworker-teamwork-concept-scaled-e1647237347687.jpg");
+  background-image: url("https://cdn.nur.kz/images/1200x675/364f38d42c3adb2c.jpeg?version=1");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
