--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://pub-c2c1d9230f0b4abb9b0d2d95e06fd4ef.r2.dev/sites/430/2022/03/group-asia-young-creative-people-smart-casual-wear-smiling-arms-crossed-creative-office-workplace-diverse-asian-male-female-stand-together-startup-coworker-teamwork-concept-scaled-e1647237347687.jpg");
+  background-image: url("https://images.pexels.com/photos/160994/family-outdoor-happy-happiness-160994.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
