--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://cdn.nur.kz/images/1120/90272e931da0df00.jpeg");
+  background-image: url("https://userscontent2.emaze.com/images/b5060766-bad1-4787-8080-38dc6b450b94/468355c9-21f6-43b2-a8b4-e9b930fdff0e.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
