--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://coolerinsights.com/wp-content/uploads/2014/03/8-Ds-of-Great-Leaders-1.jpg");
+  background-image: url("https://dichthuatachau.com/en/wp-content/uploads/2018/09/office.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
