update testi, gambar, dan icon

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://dichthuatachau.com/en/wp-content/uploads/2018/09/office.jpg");
+  background-image: url("https://cdn.nur.kz/images/1120/90272e931da0df00.jpeg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
