--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://cdn.nur.kz/images/1120/90272e931da0df00.jpeg");
+  background-image: url("https://images.squarespace-cdn.com/content/52249322e4b041e1c9e14ae8/1515585426453-F2MYQ2OCI2RL3UH2730W/iStock_000017543892_smaller.jpg?format=1500w&content-type=image%2Fjpeg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
