update testi, image, dan icon

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://s.yimg.com/ny/api/res/1.2/a_8B9GYPKd.mxsHLfwECYQ--/YXBwaWQ9aGlnaGxhbmRlcjt3PTEyMDA7aD04MDA-/https://s.yimg.com/os/creatr-uploaded-images/2022-06/b7025150-f36d-11ec-b7de-3f1e41d83300");
+  background-image: url("https://rdblobprod.blob.core.windows.net/prod/custom/blog-post/header/5d9bd06d7432b.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
