update poto, emote, dan testimoni

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://rdblobprod.blob.core.windows.net/prod/custom/blog-post/header/5d9bd06d7432b.jpg");
+  background-image: url("https://www.worldatlas.com/r/w1200-q80/upload/5f/c0/37/shutterstock-109945136.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
