update image, dan icon

--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://rdblobprod.blob.core.windows.net/prod/custom/blog-post/header/5d9bd06d7432b.jpg");
+  background-image: url("https://i.pinimg.com/originals/2b/00/14/2b0014dacd218f3bf6c39b29067f83dd.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
