--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://avatars.mds.yandex.net/i?id=040f9f568d02e7250dae44cc47abe6a1d1ae004e-9140040-images-thumbs&n=13");
+  background-image: url("https://img.freepik.com/premium-photo/indoor-portrait-beautiful-asian-3-generations-family-white-background_20263-1067.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
