--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://i.ytimg.com/vi/09-Nxk0V2fU/maxresdefault.jpg");
+  background-image: url("https://www.conferenceeasy.com/wp-content/uploads/2012/07/10318241_m.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
