--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://www.conferenceeasy.com/wp-content/uploads/2012/07/10318241_m.jpg");
+  background-image: url("https://t4.ftcdn.net/jpg/01/29/85/35/360_F_129853550_cooLHeMUy9CRFSgIveo9Fjuqubt4Mhnp.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
