--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://t4.ftcdn.net/jpg/01/29/85/35/360_F_129853550_cooLHeMUy9CRFSgIveo9Fjuqubt4Mhnp.jpg");
+  background-image: url("https://vn.elsaspeak.com/wp-content/uploads/2021/06/dai-su-thuong-hieu-0-1.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
