--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2656,3 +2656,31 @@ section {
   box-shadow: 0px 0px 10px 2px #fcf221;
   -webkit-box-shadow: 0px 0px 10px 2px #fcf221;
 }
+button.send_contact {
+  border: 0;
+  padding: 10px 35px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+  background: linear-gradient(to bottom, #0f61a8 5%, #0b2b6a 100%);
+  box-shadow: 0px 5px 16px -6px rgba(114, 4, 207, 1);
+  cursor: pointer;
+  display: inline-block;
+}
+
+button.send_contact:hover {
+  background: linear-gradient(to bottom, #0b2b6a 5%, #0f61a8 100%);
+  background-color: #0b2b6a;
+  color: #fff;
+  box-shadow: 0px 0px 4px 2px rgba(114, 4, 207, 0.75);
+}
+
+button.send_contact:active {
+  transform: scale(0.96);
+}
+
+.php-email-form .loading,
+.php-email-form .error-message,
+.php-email-form .sent-message {
+  display: none;
+}
