--- a/assets/part/scrolling-zoom/style.css
+++ b/assets/part/scrolling-zoom/style.css
@@ -23,7 +23,7 @@
 }
 
 .scrolling-zoom .content .section.hero {
-  background-image: url("https://www.hse.ru/data/2022/11/17/1726751788/659679_diller0054.jpg.(1000x1000x1).jpg");
+  background-image: url("https://asset-2.tstatic.net/trends/foto/bank/images/Ilustrasi-zodiak-tetap-aktif-meski-usia-tak-lagi-muda.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
